Moving RNG to Tools and trying out SecureRandom