@@ -1,17 +1,22 @@
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Map;
 
 public class ParameterStringBuilder {
-    public static String getParamsString(Map<String, String> params)
-            throws UnsupportedEncodingException {
+    /**
+     * Generates the parameters part of the HTTP request in the form of a String.
+     * @param params A String-String map of parameters to be passed into the request.
+     * @return The String form of all parameters in the map. Parameters will be attached to values using '=' and
+     * separated with '&'.
+     */
+    public static String getParamsString(Map<String, String> params) {
         StringBuilder result = new StringBuilder();
 
         // Encode parameters into UTF-8.
         for (Map.Entry<String, String> entry : params.entrySet()) {
-            result.append(URLEncoder.encode(entry.getKey(), "UTF-8"));
+            result.append(URLEncoder.encode(entry.getKey(), StandardCharsets.UTF_8));
             result.append("=");
-            result.append(URLEncoder.encode(entry.getValue(), "UTF-8"));
+            result.append(URLEncoder.encode(entry.getValue(), StandardCharsets.UTF_8));
             result.append("&");
         }
 
